<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2018 Razeware LLC
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in
  ~ all copies or substantial portions of the Software.
  ~
  ~ Notwithstanding the foregoing, you may not use, copy, modify, merge, publish,
  ~ distribute, sublicense, create a derivative work, and/or sell copies of the
  ~ Software in any work that is designed, intended, or marketed for pedagogical or
  ~ instructional purposes related to programming, coding, application development,
  ~ or information technology.  Permission for such use, copying, modification,
  ~ merger, publication, distribution, sublicensing, creation of derivative works,
  ~ or sale is expressly withheld.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  ~ THE SOFTWARE.
  -->

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                 xmlns:app="http://schemas.android.com/apk/res-auto"
                                                 xmlns:tools="http://schemas.android.com/tools"
                                                 android:id="@+id/main"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="match_parent"
                                                 tools:context=".NewReminderActivity">

    <fragment
            android:id="@+id/map1"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    <ImageView
            android:id="@+id/marker"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginBottom="24dp"
            android:contentDescription="@string/marker_content_description"
            app:srcCompat="@drawable/ic_twotone_location_on_48px" tools:ignore="VectorDrawableCompat"/>

    <LinearLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="#ffffff"
            android:orientation="vertical">

        <TextView
                android:id="@+id/instructionTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="8dp"
                android:textColor="#000"
                android:textSize="18sp"
                tools:text="@string/instruction_where_description" />

        <TextView
                android:id="@+id/instructionSubtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/instruction_where_subtitle_description" />

        <SeekBar
                android:id="@+id/radiusBar"
                style="@style/Widget.AppCompat.SeekBar.Discrete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:max="4"
                android:progress="2" />

        <TextView
                android:id="@+id/radiusDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|bottom"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="4dp"
                tools:text="100 meters" />

        <EditText
                android:id="@+id/message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="13dp"
                android:layout_marginRight="13dp"
                android:layout_marginBottom="8dp"
                android:hint="@string/message_hint"
                android:imeOptions="actionDone"
                android:inputType="textCapSentences"
                android:maxLines="1" />

        <Button
                android:id="@+id/next"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/bg_button"
                android:foreground="?attr/selectableItemBackground"
                android:text="@string/continue_description"
                android:textColor="@color/colorAccent" />

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>